[package]
name = "y2015"
version = "0.1.0"
authors = ["Jason Duffy <jasonsduffy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
permutohedron = "0.2.4"
rand = "0.7.3"
regex = "1.5.5"
serde_json = "1.0"
